fix: 修复列表辅助线重叠问题 | Fixed list guides overlap issue.

--- a/style/module/block-list.css
+++ b/style/module/block-list.css
@@ -8,6 +8,9 @@
   left: calc(16px - 2em);
   top: 0;
 }
+.protyle-wysiwyg [data-node-id].li > [data-node-id]:nth-child(2)::before {
+  top: 30px !important;
+}
 .protyle-wysiwyg [data-node-id].li > [data-node-id].list {
   /* 列表缩进(列表块) */
   margin-left: 1em !important;
